Test fore preventing overflow-x in media query

--- a/css/styles.css
+++ b/css/styles.css
@@ -595,12 +595,12 @@ footer small {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width: 280px) and (max-device-width: 767px) {
-  body{
+  /* body{
     max-width: 100%;
   }
   nav {
     max-width: 100%;
-  }
+  } */
 
   a.logo {
     margin-left: 15%;
@@ -1172,253 +1172,7 @@ body {
 
 /* iPads (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-  body{
-    max-width: 100%;
-  }
-  nav {
-    max-width: 100%;
-  }
-
-  a.logo {
-    margin-left: 15%;
-  }
-
-  a.logo img {
-    width: 90px;
-    position: relative;
-    top: 3px;
-  }
-
-  .dd-arrow {
-    display: block;
-    position: absolute;
-    right: 0;
-    margin-right: 15%;
-    opacity: 60%;
-    width: 40px;
-  }
-
-  .dd {
-    font-size: 1em;
-    position: fixed;
-    z-index: 11;
-    top: 80px;
-    left: 70%;
-    width: 100px;
-    text-align: center;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 600;
-  }
-
-  .dd-cont {
-    background-color: #f6f6f6;
-    box-shadow: 0px 0px 2px rgb(221, 221, 221);
-    height: 200px;
-    width: 150px;
-    position: relative;
-    border-radius: 15px;
-  }
-
-  .dd a {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    font-family: "Ubuntu", sans-serif;
-    color: #333;
-  }
-
-  .dd a:hover{
-    color: black;
-  }
-
-  .dd a:active{
-    color: black;
-  }
-
-  .dd a:visited{
-    color: #333;
-  }
-
-  .nav-list {
-    display: none;
-  }
-
-  nav a {
-    text-decoration: none;
-    color: #333;
-    padding: 10px;
-    border-radius: 10px;
-
-  }
-
-  .main-text {
-    text-shadow: 0px 0px 7px rgba(51, 51, 51, 0.301);
-    display: inline-block;
-    font-size: 0.9em;
-  }
   
-  .text-title {
-    font-family: "Ubuntu", sans-serif;
-    font-size: 1.5em;
-    font-weight: 600;
-    position: relative;
-    top: 200px;
-    /* left: 250px; */
-    margin-top: 5px;
-    color: rgb(37, 37, 37);
-    letter-spacing: 2px;
-  }
-  
-  .title {
-    font-family: "Pangolin", sans-serif;
-    font-size: 4em;
-    letter-spacing: 5px;
-    position: relative;
-    top: 200px;
-    /* left: 250px; */
-    color: rgb(37, 37, 37);
-    margin-top: 10px;
-    font-weight: 700;
-  }
-  
-  .pos-text {
-    font-family: "Ubuntu", sans-serif;
-    font-size: 1.1em;
-    font-weight: 600;
-    position: relative;
-    top: 200px;
-    /* left: 250px; */
-    margin-top: 5px;
-    letter-spacing: 3px;
-    color: rgb(37, 37, 37);
-  }
-  
-  .hire,
-  .get-cv {
-    position: relative;
-    top: 200px;
-    /* left: 250px; */
-    border: none;
-    width: 120px;
-    margin-top: 25px;
-    padding: 13px;
-    border-radius: 7px;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: bolder;
-    text-shadow: 2px 2px 7px rgba(22, 22, 22, 0.52);
-    box-shadow: 0.5px 0.5px 3px rgba(0, 0, 0, 0.404);
-    letter-spacing: 5px;
-    float: left;
-  }
-  
-  .get-cv2 {
-    position: relative;
-    top: 280px;
-    left: 35%;
-    border: none;
-    width: 150px;
-    margin-top: 250px;
-    padding: 13px;
-    border-radius: 7px;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: bolder;
-    text-shadow: 2px 2px 7px rgba(22, 22, 22, 0.52);
-    box-shadow: 0.5px 0.5px 3px rgba(0, 0, 0, 0.404);
-    letter-spacing: 5px;
-    float: left;
-    margin-left: 15px;
-    color: #065c2a;
-    border: 1px solid #571e8d3b;
-  }
-  
-  .hire {
-    color: #065c2a;
-    border: 1px solid #571e8d3b;
-  }
-  
-  .get-cv {
-    margin-left: 15px;
-    color: #065c2a;
-    border: 1px solid #571e8d3b;
-  }
-  
-  .get-cv2 {
-    position: relative;
-    /* top: 255px; */
-    margin: auto;
-  }
-  
-  .hire:hover,
-  .get-cv:hover,
-  .get-cv2:hover,
-  .contact-btn:hover {
-    background: linear-gradient(90deg, #5479f2, #065c2a);
-    color: #fff;
-  }
-  
-  .hire:active,
-  .get-cv:active,
-  .get-cv2:active,
-  .contact-btn:active {
-    background: linear-gradient(45deg, #1e48d1, #065c2a);
-    color: #fff;
-  }
-  
-  img.main-img {
-    width: 70%;
-    float: left;
-    position: relative;
-    top: -90px;
-    left: 270px;
-    z-index: -1;
-  }
-  
-  .home-cont {
-    margin: auto;
-    width: 80%;
-  }
-
-  .about-img {
-    width: 100%;
-    opacity: 80%;
-    position: relative;
-    /* left: 130px; */
-    top: 200px;
-  }
-
-  .services-cont {
-    width: 190px;
-    height: 280px;
-    text-align: center;
-    padding: 40px 15px;
-    background-color: rgba(242, 253, 245, 0.653);
-    border-radius: 10px;
-    color: #333;
-    flex-direction: row;
-    margin: 80px 0px 0px 20px;
-    /* margin: aut  o; */
-    transition: all 0.4s;
-  }
-
-  .techs-cont {
-    width: 70%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: auto;
-    position: relative;
-    top: 70px;
-    left: 10%;
-  }
-
-  #footer-bcg {
-    position: relative;
-    top: 850px;
-    /* bottom: 0; */
-    width: 100%;
-    z-index: -3;
-    opacity: 40%;
-  }
 }
 
 /* iPads (landscape) ----------- */
